# MangaShelf

./: .gitignore  .sops.yaml  AGENTS.md  README.md  Taskfile.yml
.github/ISSUE_TEMPLATE/: epic.md  story.md  task.md
backend/: .env.example  pyproject.toml
backend/data/: library.json
backend/src/: main.py
backend/src/application/: __init__.py
backend/src/application/commands/: delete_library_item.py  upsert_library_item.py
backend/src/application/queries/: __init__.py  get_library.py  rank_search_results.py  search_books.py
backend/src/domain/: errors.py  models.py  repositories.py  search.py  series_identity.py  services.py
backend/src/infrastructure/: config.py
backend/src/infrastructure/persistence/: json_library_repository.py
backend/src/infrastructure/search/: composite_search_service.py  google_books_service.py  ndl_opensearch_service.py  rakuten_books_service.py
backend/src/presentation/: __init__.py  api.py  dependencies.py  schemas.py
backend/src/presentation/routers/: health.py  library.py  search.py
docs/: requirements.md  tech-selection.md
frontend/: .eslintrc.cjs  .prettierrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/application/commands/: DeleteLibraryItem.ts  RestoreLibraryFromGoogleDrive.ts  SaveAppSettings.ts  SyncLibraryBidirectionallyWithGoogleDrive.ts  SyncLibraryToGoogleDrive.ts  UpsertLibraryItem.ts
frontend/src/domain/: search.ts
frontend/src/domain/entities/: AppSettings.ts  (+1 more)
frontend/src/presentation/: App.tsx
(+21 files in other folders)
