[project]
name = "mangashelf-backend"
version = "0.1.0"
description = "MangaShelf backend API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "requests>=2.32.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/application", "src/infrastructure", "src/presentation"]
include = ["src/main.py"]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "ty>=0.0.14"
]
